# kdevqtdesigner

./: CMakeLists.txt  README.md  build-and-install.sh  integration.cpp  integration.h  kdevqtdesigner.desktop  kdevqtdesigner.json  kdevqtdesigner.qrc  kdevqtdesigner.rc  qtdesignerdocument.cpp  qtdesignerdocument.h  qtdesignerplugin.cpp  qtdesignerplugin.h  qtdesignerview.cpp  qtdesignerview.h  qtdesignerwidget.cpp  qtdesignerwidget.h  run-kdevelop.sh
internals/: qdesigner_integration_p.h  shared_global_p.h
